# ordermatchingsystem

./: .gitignore  CMakeLists.txt  README.md  oms.sln
Strategies/: AbstractStrategy.cpp  AbstractStrategy.h  IObserver.h  ISubject.h  LatencyArbitrageStrategy.cpp  LatencyArbitrageStrategy.h  Strategies.vcxproj  Strategies.vcxproj.filters  Strategist.cpp  Strategist.h  TriangularArbitrageStrategy.cpp  TriangularArbitrageStrategy.h
datafeeder/: FixConnector.cpp  FixConnector.h  datafeeder.vcxproj  datafeeder.vcxproj.filters
doc/: notes.txt
src/example/: example.cpp  example.vcxproj  example.vcxproj.filters
src/oms/: Asset.cpp  Asset.h  ComparablePrice.cpp  ComparablePrice.h  Depth.cpp  Depth.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h  OrderListener.cpp  OrderListener.h  OrderTracker.cpp  OrderTracker.h  Trader.cpp  Trader.h  oms.vcxproj  oms.vcxproj.filters  types.h
tests/oms.test/: general.cpp  oms.test.vcxproj  oms.test.vcxproj.filters  stdafx.cpp
