cmake_minimum_required(VERSION 3.15)
project(ordermatchingsystem)

set(CMAKE_CXX_STANDARD 14)

include_directories(lib/googletest/googlemock/include)
include_directories(lib/googletest/googlemock/include/gmock)
include_directories(lib/googletest/googlemock/include/gmock/internal)
include_directories(lib/googletest/googlemock/include/gmock/internal/custom)
include_directories(lib/googletest/googlemock/test)
include_directories(lib/googletest/googletest/include)
include_directories(lib/googletest/googletest/include/gtest)
include_directories(lib/googletest/googletest/include/gtest/internal)
include_directories(lib/googletest/googletest/include/gtest/internal/custom)
include_directories(lib/googletest/googletest/samples)
include_directories(lib/googletest/googletest/src)
include_directories(lib/googletest/googletest/test)
include_directories(src/example)
include_directories(src/example/Debug)
include_directories(src/oms)

add_executable(ordermatchingsystem
        lib/googletest/ci/build-linux-bazel.sh
        lib/googletest/ci/build-platformio.sh
        lib/googletest/ci/env-linux.sh
        lib/googletest/ci/env-osx.sh
        lib/googletest/ci/get-nprocessors.sh
        lib/googletest/ci/install-linux.sh
        lib/googletest/ci/install-osx.sh
        lib/googletest/ci/install-platformio.sh
        lib/googletest/ci/log-config.sh
        lib/googletest/ci/travis.sh
        lib/googletest/googlemock/cmake/gmock.pc.in
        lib/googletest/googlemock/cmake/gmock_main.pc.in
        lib/googletest/googlemock/docs/cheat_sheet.md
        lib/googletest/googlemock/docs/cook_book.md
        lib/googletest/googlemock/docs/for_dummies.md
        lib/googletest/googlemock/docs/gmock_faq.md
        lib/googletest/googlemock/docs/pump_manual.md
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h.pump
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        lib/googletest/googlemock/include/gmock/internal/custom/gmock-port.h
        lib/googletest/googlemock/include/gmock/internal/custom/README.md
        lib/googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
        lib/googletest/googlemock/include/gmock/internal/gmock-port.h
        lib/googletest/googlemock/include/gmock/internal/gmock-pp.h
        lib/googletest/googlemock/include/gmock/gmock-actions.h
        lib/googletest/googlemock/include/gmock/gmock-cardinalities.h
        lib/googletest/googlemock/include/gmock/gmock-function-mocker.h
        lib/googletest/googlemock/include/gmock/gmock-generated-actions.h
        lib/googletest/googlemock/include/gmock/gmock-generated-actions.h.pump
        lib/googletest/googlemock/include/gmock/gmock-matchers.h
        lib/googletest/googlemock/include/gmock/gmock-more-actions.h
        lib/googletest/googlemock/include/gmock/gmock-more-matchers.h
        lib/googletest/googlemock/include/gmock/gmock-nice-strict.h
        lib/googletest/googlemock/include/gmock/gmock-spec-builders.h
        lib/googletest/googlemock/include/gmock/gmock.h
        lib/googletest/googlemock/scripts/generator/cpp/__init__.py
        lib/googletest/googlemock/scripts/generator/cpp/ast.py
        lib/googletest/googlemock/scripts/generator/cpp/gmock_class.py
        lib/googletest/googlemock/scripts/generator/cpp/gmock_class_test.py
        lib/googletest/googlemock/scripts/generator/cpp/keywords.py
        lib/googletest/googlemock/scripts/generator/cpp/tokenize.py
        lib/googletest/googlemock/scripts/generator/cpp/utils.py
        lib/googletest/googlemock/scripts/generator/gmock_gen.py
        lib/googletest/googlemock/scripts/generator/LICENSE
        lib/googletest/googlemock/scripts/generator/README
        lib/googletest/googlemock/scripts/generator/README.cppclean
        lib/googletest/googlemock/scripts/fuse_gmock_files.py
        lib/googletest/googlemock/scripts/pump.py
        lib/googletest/googlemock/scripts/README.md
        lib/googletest/googlemock/src/gmock-all.cc
        lib/googletest/googlemock/src/gmock-cardinalities.cc
        lib/googletest/googlemock/src/gmock-internal-utils.cc
        lib/googletest/googlemock/src/gmock-matchers.cc
        lib/googletest/googlemock/src/gmock-spec-builders.cc
        lib/googletest/googlemock/src/gmock.cc
        lib/googletest/googlemock/src/gmock_main.cc
        lib/googletest/googlemock/test/BUILD.bazel
        lib/googletest/googlemock/test/gmock-actions_test.cc
        lib/googletest/googlemock/test/gmock-cardinalities_test.cc
        lib/googletest/googlemock/test/gmock-function-mocker_nc.cc
        lib/googletest/googlemock/test/gmock-function-mocker_nc_test.py
        lib/googletest/googlemock/test/gmock-function-mocker_test.cc
        lib/googletest/googlemock/test/gmock-generated-actions_test.cc
        lib/googletest/googlemock/test/gmock-generated-matchers_test.cc
        lib/googletest/googlemock/test/gmock-internal-utils_test.cc
        lib/googletest/googlemock/test/gmock-matchers_test.cc
        lib/googletest/googlemock/test/gmock-more-actions_test.cc
        lib/googletest/googlemock/test/gmock-nice-strict_test.cc
        lib/googletest/googlemock/test/gmock-port_test.cc
        lib/googletest/googlemock/test/gmock-pp-string_test.cc
        lib/googletest/googlemock/test/gmock-pp_test.cc
        lib/googletest/googlemock/test/gmock-spec-builders_test.cc
        lib/googletest/googlemock/test/gmock_all_test.cc
        lib/googletest/googlemock/test/gmock_ex_test.cc
        lib/googletest/googlemock/test/gmock_leak_test.py
        lib/googletest/googlemock/test/gmock_leak_test_.cc
        lib/googletest/googlemock/test/gmock_link2_test.cc
        lib/googletest/googlemock/test/gmock_link_test.cc
        lib/googletest/googlemock/test/gmock_link_test.h
        lib/googletest/googlemock/test/gmock_output_test.py
        lib/googletest/googlemock/test/gmock_output_test_.cc
        lib/googletest/googlemock/test/gmock_output_test_golden.txt
        lib/googletest/googlemock/test/gmock_stress_test.cc
        lib/googletest/googlemock/test/gmock_test.cc
        lib/googletest/googlemock/test/gmock_test_utils.py
        lib/googletest/googlemock/test/pump_test.py
        lib/googletest/googlemock/CMakeLists.txt
        lib/googletest/googlemock/CONTRIBUTORS
        lib/googletest/googlemock/LICENSE
        lib/googletest/googlemock/README.md
        lib/googletest/googletest/cmake/Config.cmake.in
        lib/googletest/googletest/cmake/gtest.pc.in
        lib/googletest/googletest/cmake/gtest_main.pc.in
        lib/googletest/googletest/cmake/internal_utils.cmake
        lib/googletest/googletest/cmake/libgtest.la.in
        lib/googletest/googletest/docs/advanced.md
        lib/googletest/googletest/docs/faq.md
        lib/googletest/googletest/docs/pkgconfig.md
        lib/googletest/googletest/docs/primer.md
        lib/googletest/googletest/docs/samples.md
        lib/googletest/googletest/include/gtest/internal/custom/gtest-port.h
        lib/googletest/googletest/include/gtest/internal/custom/gtest-printers.h
        lib/googletest/googletest/include/gtest/internal/custom/gtest.h
        lib/googletest/googletest/include/gtest/internal/custom/README.md
        lib/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
        lib/googletest/googletest/include/gtest/internal/gtest-filepath.h
        lib/googletest/googletest/include/gtest/internal/gtest-internal.h
        lib/googletest/googletest/include/gtest/internal/gtest-param-util.h
        lib/googletest/googletest/include/gtest/internal/gtest-port-arch.h
        lib/googletest/googletest/include/gtest/internal/gtest-port.h
        lib/googletest/googletest/include/gtest/internal/gtest-string.h
        lib/googletest/googletest/include/gtest/internal/gtest-type-util.h
        lib/googletest/googletest/include/gtest/gtest-death-test.h
        lib/googletest/googletest/include/gtest/gtest-matchers.h
        lib/googletest/googletest/include/gtest/gtest-message.h
        lib/googletest/googletest/include/gtest/gtest-param-test.h
        lib/googletest/googletest/include/gtest/gtest-printers.h
        lib/googletest/googletest/include/gtest/gtest-spi.h
        lib/googletest/googletest/include/gtest/gtest-test-part.h
        lib/googletest/googletest/include/gtest/gtest-typed-test.h
        lib/googletest/googletest/include/gtest/gtest.h
        lib/googletest/googletest/include/gtest/gtest_pred_impl.h
        lib/googletest/googletest/include/gtest/gtest_prod.h
        lib/googletest/googletest/samples/prime_tables.h
        lib/googletest/googletest/samples/sample1.cc
        lib/googletest/googletest/samples/sample1.h
        lib/googletest/googletest/samples/sample10_unittest.cc
        lib/googletest/googletest/samples/sample1_unittest.cc
        lib/googletest/googletest/samples/sample2.cc
        lib/googletest/googletest/samples/sample2.h
        lib/googletest/googletest/samples/sample2_unittest.cc
        lib/googletest/googletest/samples/sample3-inl.h
        lib/googletest/googletest/samples/sample3_unittest.cc
        lib/googletest/googletest/samples/sample4.cc
        lib/googletest/googletest/samples/sample4.h
        lib/googletest/googletest/samples/sample4_unittest.cc
        lib/googletest/googletest/samples/sample5_unittest.cc
        lib/googletest/googletest/samples/sample6_unittest.cc
        lib/googletest/googletest/samples/sample7_unittest.cc
        lib/googletest/googletest/samples/sample8_unittest.cc
        lib/googletest/googletest/samples/sample9_unittest.cc
        lib/googletest/googletest/scripts/test/Makefile
        lib/googletest/googletest/scripts/common.py
        lib/googletest/googletest/scripts/fuse_gtest_files.py
        lib/googletest/googletest/scripts/gen_gtest_pred_impl.py
        lib/googletest/googletest/scripts/gtest-config.in
        lib/googletest/googletest/scripts/README.md
        lib/googletest/googletest/scripts/release_docs.py
        lib/googletest/googletest/scripts/run_with_path.py
        lib/googletest/googletest/scripts/upload.py
        lib/googletest/googletest/scripts/upload_gtest.py
        lib/googletest/googletest/src/gtest-all.cc
        lib/googletest/googletest/src/gtest-death-test.cc
        lib/googletest/googletest/src/gtest-filepath.cc
        lib/googletest/googletest/src/gtest-internal-inl.h
        lib/googletest/googletest/src/gtest-matchers.cc
        lib/googletest/googletest/src/gtest-port.cc
        lib/googletest/googletest/src/gtest-printers.cc
        lib/googletest/googletest/src/gtest-test-part.cc
        lib/googletest/googletest/src/gtest-typed-test.cc
        lib/googletest/googletest/src/gtest.cc
        lib/googletest/googletest/src/gtest_main.cc
        lib/googletest/googletest/test/BUILD.bazel
        lib/googletest/googletest/test/googletest-break-on-failure-unittest.py
        lib/googletest/googletest/test/googletest-break-on-failure-unittest_.cc
        lib/googletest/googletest/test/googletest-catch-exceptions-test.py
        lib/googletest/googletest/test/googletest-catch-exceptions-test_.cc
        lib/googletest/googletest/test/googletest-color-test.py
        lib/googletest/googletest/test/googletest-color-test_.cc
        lib/googletest/googletest/test/googletest-death-test-test.cc
        lib/googletest/googletest/test/googletest-death-test_ex_test.cc
        lib/googletest/googletest/test/googletest-env-var-test.py
        lib/googletest/googletest/test/googletest-env-var-test_.cc
        lib/googletest/googletest/test/googletest-filepath-test.cc
        lib/googletest/googletest/test/googletest-filter-unittest.py
        lib/googletest/googletest/test/googletest-filter-unittest_.cc
        lib/googletest/googletest/test/googletest-json-outfiles-test.py
        lib/googletest/googletest/test/googletest-json-output-unittest.py
        lib/googletest/googletest/test/googletest-list-tests-unittest.py
        lib/googletest/googletest/test/googletest-list-tests-unittest_.cc
        lib/googletest/googletest/test/googletest-listener-test.cc
        lib/googletest/googletest/test/googletest-message-test.cc
        lib/googletest/googletest/test/googletest-options-test.cc
        lib/googletest/googletest/test/googletest-output-test-golden-lin.txt
        lib/googletest/googletest/test/googletest-output-test.py
        lib/googletest/googletest/test/googletest-output-test_.cc
        lib/googletest/googletest/test/googletest-param-test-invalid-name1-test.py
        lib/googletest/googletest/test/googletest-param-test-invalid-name1-test_.cc
        lib/googletest/googletest/test/googletest-param-test-invalid-name2-test.py
        lib/googletest/googletest/test/googletest-param-test-invalid-name2-test_.cc
        lib/googletest/googletest/test/googletest-param-test-test.cc
        lib/googletest/googletest/test/googletest-param-test-test.h
        lib/googletest/googletest/test/googletest-param-test2-test.cc
        lib/googletest/googletest/test/googletest-port-test.cc
        lib/googletest/googletest/test/googletest-printers-test.cc
        lib/googletest/googletest/test/googletest-setuptestsuite-test.py
        lib/googletest/googletest/test/googletest-setuptestsuite-test_.cc
        lib/googletest/googletest/test/googletest-shuffle-test.py
        lib/googletest/googletest/test/googletest-shuffle-test_.cc
        lib/googletest/googletest/test/googletest-test-part-test.cc
        lib/googletest/googletest/test/googletest-throw-on-failure-test.py
        lib/googletest/googletest/test/googletest-throw-on-failure-test_.cc
        lib/googletest/googletest/test/googletest-uninitialized-test.py
        lib/googletest/googletest/test/googletest-uninitialized-test_.cc
        lib/googletest/googletest/test/gtest-typed-test2_test.cc
        lib/googletest/googletest/test/gtest-typed-test_test.cc
        lib/googletest/googletest/test/gtest-typed-test_test.h
        lib/googletest/googletest/test/gtest-unittest-api_test.cc
        lib/googletest/googletest/test/gtest_all_test.cc
        lib/googletest/googletest/test/gtest_assert_by_exception_test.cc
        lib/googletest/googletest/test/gtest_environment_test.cc
        lib/googletest/googletest/test/gtest_help_test.py
        lib/googletest/googletest/test/gtest_help_test_.cc
        lib/googletest/googletest/test/gtest_json_test_utils.py
        lib/googletest/googletest/test/gtest_list_output_unittest.py
        lib/googletest/googletest/test/gtest_list_output_unittest_.cc
        lib/googletest/googletest/test/gtest_main_unittest.cc
        lib/googletest/googletest/test/gtest_no_test_unittest.cc
        lib/googletest/googletest/test/gtest_pred_impl_unittest.cc
        lib/googletest/googletest/test/gtest_premature_exit_test.cc
        lib/googletest/googletest/test/gtest_prod_test.cc
        lib/googletest/googletest/test/gtest_repeat_test.cc
        lib/googletest/googletest/test/gtest_skip_check_output_test.py
        lib/googletest/googletest/test/gtest_skip_environment_check_output_test.py
        lib/googletest/googletest/test/gtest_skip_in_environment_setup_test.cc
        lib/googletest/googletest/test/gtest_skip_test.cc
        lib/googletest/googletest/test/gtest_sole_header_test.cc
        lib/googletest/googletest/test/gtest_stress_test.cc
        lib/googletest/googletest/test/gtest_test_macro_stack_footprint_test.cc
        lib/googletest/googletest/test/gtest_test_utils.py
        lib/googletest/googletest/test/gtest_testbridge_test.py
        lib/googletest/googletest/test/gtest_testbridge_test_.cc
        lib/googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
        lib/googletest/googletest/test/gtest_unittest.cc
        lib/googletest/googletest/test/gtest_xml_outfile1_test_.cc
        lib/googletest/googletest/test/gtest_xml_outfile2_test_.cc
        lib/googletest/googletest/test/gtest_xml_outfiles_test.py
        lib/googletest/googletest/test/gtest_xml_output_unittest.py
        lib/googletest/googletest/test/gtest_xml_output_unittest_.cc
        lib/googletest/googletest/test/gtest_xml_test_utils.py
        lib/googletest/googletest/test/production.cc
        lib/googletest/googletest/test/production.h
        lib/googletest/googletest/CMakeLists.txt
        lib/googletest/googletest/CONTRIBUTORS
        lib/googletest/googletest/LICENSE
        lib/googletest/googletest/README.md
        lib/googletest/.clang-format
        lib/googletest/.gitignore
        lib/googletest/.travis.yml
        lib/googletest/appveyor.yml
        lib/googletest/BUILD.bazel
        lib/googletest/CMakeLists.txt
        lib/googletest/CONTRIBUTING.md
        lib/googletest/library.json
        lib/googletest/LICENSE
        lib/googletest/platformio.ini
        lib/googletest/README.md
        lib/googletest/WORKSPACE
        src/example/Debug/example.pch
        src/example/example.cpp
        src/example/pch.cpp
        src/example/pch.h
        src/oms/Asset.cpp
        src/oms/Asset.h
        src/oms/ComparablePrice.cpp
        src/oms/ComparablePrice.h
        src/oms/Depth.cpp
        src/oms/Depth.h
        src/oms/Order.cpp
        src/oms/Order.h
        src/oms/OrderBook.cpp
        src/oms/OrderBook.h
        src/oms/OrderListener.cpp
        src/oms/OrderListener.h
        src/oms/OrderTracker.cpp
        src/oms/OrderTracker.h
        src/oms/types.h)
